--- a/notebooks/quick_walkthrough.ipynb
+++ b/notebooks/quick_walkthrough.ipynb
@@ -20,17 +20,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zuxin/anaconda3/envs/libero/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-25T19:57:32.607666313Z",
+     "start_time": "2024-07-25T19:57:32.201199575Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from libero.libero import benchmark, get_libero_path, set_libero_default_path\n",
     "import os\n",
@@ -56,15 +52,20 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-25T19:57:42.652734265Z",
+     "start_time": "2024-07-25T19:57:42.648029954Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Default benchmark root path:  /home/zuxin/repo/LIBERO/libero/libero\n",
-      "Default dataset root path:  /home/zuxin/repo/LIBERO/libero/libero/../datasets\n",
-      "Default bddl files root path:  /home/zuxin/repo/LIBERO/libero/libero/./bddl_files\n"
+      "Default benchmark root path:  /home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/libero\n",
+      "Default dataset root path:  /home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/libero/../datasets\n",
+      "Default bddl files root path:  /home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/libero/./bddl_files\n"
      ]
     }
    ],
@@ -166,8 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-25T19:59:34.960778632Z",
+     "start_time": "2024-07-25T19:59:34.956475746Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -192,26 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-25T19:59:41.979171992Z",
+     "start_time": "2024-07-25T19:59:41.972715215Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[info] using task orders [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "10 tasks in the benchmark libero_10: \n",
+      "1 tasks in the benchmark libero_10: \n",
       "The benchmark contains the following tasks:\n",
-      "\t LIVING_ROOM_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket.bddl\n",
-      "\t LIVING_ROOM_SCENE2_put_both_the_cream_cheese_box_and_the_butter_in_the_basket, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE2_put_both_the_cream_cheese_box_and_the_butter_in_the_basket.bddl\n",
-      "\t KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it.bddl\n",
-      "\t KITCHEN_SCENE4_put_the_black_bowl_in_the_bottom_drawer_of_the_cabinet_and_close_it, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/KITCHEN_SCENE4_put_the_black_bowl_in_the_bottom_drawer_of_the_cabinet_and_close_it.bddl\n",
-      "\t LIVING_ROOM_SCENE5_put_the_white_mug_on_the_left_plate_and_put_the_yellow_and_white_mug_on_the_right_plate, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE5_put_the_white_mug_on_the_left_plate_and_put_the_yellow_and_white_mug_on_the_right_plate.bddl\n",
-      "\t STUDY_SCENE1_pick_up_the_book_and_place_it_in_the_back_compartment_of_the_caddy, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/STUDY_SCENE1_pick_up_the_book_and_place_it_in_the_back_compartment_of_the_caddy.bddl\n",
-      "\t LIVING_ROOM_SCENE6_put_the_white_mug_on_the_plate_and_put_the_chocolate_pudding_to_the_right_of_the_plate, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE6_put_the_white_mug_on_the_plate_and_put_the_chocolate_pudding_to_the_right_of_the_plate.bddl\n",
-      "\t LIVING_ROOM_SCENE1_put_both_the_alphabet_soup_and_the_cream_cheese_box_in_the_basket, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE1_put_both_the_alphabet_soup_and_the_cream_cheese_box_in_the_basket.bddl\n",
-      "\t KITCHEN_SCENE8_put_both_moka_pots_on_the_stove, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/KITCHEN_SCENE8_put_both_moka_pots_on_the_stove.bddl\n",
-      "\t KITCHEN_SCENE6_put_the_yellow_and_white_mug_in_the_microwave_and_close_it, detail definition stored in /home/zuxin/repo/LIBERO/libero/libero/./bddl_files/libero_10/KITCHEN_SCENE6_put_the_yellow_and_white_mug_in_the_microwave_and_close_it.bddl\n"
+      "\t LIVING_ROOM_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket, detail definition stored in /home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/libero/./bddl_files/libero_10/LIVING_ROOM_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket.bddl\n"
      ]
     }
    ],
@@ -1320,8 +1322,9 @@
    "hash": "64fd624917382b0c0ee6e40067ed4768d5d5501e9a56437104405cabbecfa898"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 64-bit ('libero': conda)",
-   "name": "python3"
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
