debug init issue

--- a/notebooks/custom_task.ipynb
+++ b/notebooks/custom_task.ipynb
@@ -2,39 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-07-31T19:53:32.563175840Z",
-     "start_time": "2024-07-31T19:53:32.177697214Z"
+     "end_time": "2024-08-01T19:56:16.282058027Z",
+     "start_time": "2024-08-01T19:56:16.229437182Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mNo private macro file found! (macros.py:53)\n",
-      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mIt is recommended to use a private macro file (macros.py:54)\n",
-      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mTo setup, run: python /home/yygx/anaconda3/envs/libero/lib/python3.8/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['alphabet_soup', 'bbq_sauce', 'butter', 'cherries', 'chocolate_pudding', 'cookies', 'corn', 'cream_cheese', 'ketchup', 'macaroni_and_cheese', 'mayo', 'milk', 'orange_juice', 'popcorn', 'salad_dressing', 'new_salad_dressing', 'tomato_sauce', 'rack', 'white_bowl', 'akita_black_bowl', 'plate', 'basket', 'chefmate_8_frypan', 'glazed_rim_porcelain_ramekin', 'microwave', 'slide_cabinet', 'window', 'faucet', 'basin_faucet', 'short_cabinet', 'short_fridge', 'wooden_cabinet', 'white_cabinet', 'flat_stove', 'wooden_tray', 'white_storage_box', 'wooden_shelf', 'wooden_two_layer_shelf', 'wine_rack', 'wine_bottle', 'dining_set_group', 'bowl_drainer', 'moka_pot', 'black_book', 'yellow_book', 'red_coffee_mug', 'desk_caddy', 'porcelain_mug', 'white_yellow_mug', 'target_zone'])\n"
+      "['akita_black_bowl', 'alphabet_soup', 'basin_faucet', 'basket', 'bbq_sauce', 'black_book', 'bowl_drainer', 'butter', 'chefmate_8_frypan', 'cherries', 'chocolate_pudding', 'cookies', 'corn', 'cream_cheese', 'desk_caddy', 'dining_set_group', 'faucet', 'flat_stove', 'glazed_rim_porcelain_ramekin', 'ketchup', 'macaroni_and_cheese', 'mayo', 'microwave', 'milk', 'moka_pot', 'new_salad_dressing', 'orange_juice', 'plate', 'popcorn', 'porcelain_mug', 'rack', 'red_coffee_mug', 'salad_dressing', 'short_cabinet', 'short_fridge', 'slide_cabinet', 'target_zone', 'tomato_sauce', 'white_bowl', 'white_cabinet', 'white_storage_box', 'white_yellow_mug', 'window', 'wine_bottle', 'wine_rack', 'wooden_cabinet', 'wooden_shelf', 'wooden_tray', 'wooden_two_layer_shelf', 'yellow_book']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": "libero.libero.envs.objects.articulated_objects.WoodenCabinet"
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -42,8 +25,7 @@
     "\n",
     "# Get a dictionary of all the objects\n",
     "object_dict = get_object_dict()\n",
-    "print(object_dict.keys())\n",
-    "object_dict['wooden_cabinet']"
+    "print(sorted(object_dict.keys()))\n"
    ]
   },
   {
