finish debugging init issue

--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -900,13 +900,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "((73, 7), (73, 77))"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hdf5_file = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/datasets/libero_90/KITCHEN_SCENE10_close_the_top_drawer_of_the_cabinet_demo.hdf5\"\n",
+    "data_dict = hdf5_to_dict(hdf5_file)\n",
+    "data_dict['data']['demo_1']['actions'].shape, data_dict['data']['demo_1']['states'].shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-02T17:47:31.182710792Z",
+     "start_time": "2024-08-02T17:47:30.990859212Z"
+    }
+   },
+   "id": "b52dbd4ed3474886"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "b52dbd4ed3474886"
+   "id": "9895a77bd17bca85"
   }
  ],
  "metadata": {
