finish debugging init issue

--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -1242,13 +1242,154 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.0}"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_stats_file(file_path):\n",
+    "    try:\n",
+    "        with open(file_path, 'r') as file:\n",
+    "            content = file.read()\n",
+    "            print(content)\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"The file {file_path} does not exist.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"An error occurred while reading the file: {e}\")\n",
+    "\n",
+    "# Example usage:\n",
+    "stats_file_path = '/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_transformer_policy_1_eval.stats'\n",
+    "torch.load(stats_file_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T02:12:02.328644314Z",
+     "start_time": "2024-08-07T02:12:02.187407636Z"
+    }
+   },
+   "id": "64f0f3f5de1cb522"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 1.0}"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = '/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_rnn_policy_1_load0_on0.stats'\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T02:12:21.329164525Z",
+     "start_time": "2024-08-07T02:12:21.294459305Z"
+    }
+   },
+   "id": "69d181a44b20071"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.5}"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_rnn_policy_1_load1_on1.stats\"\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T02:13:11.104620644Z",
+     "start_time": "2024-08-07T02:13:10.933551015Z"
+    }
+   },
+   "id": "43eef23ab0b76e8e"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.15}"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_rnn_policy_1_load2_on2.stats\"\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T02:15:37.026789529Z",
+     "start_time": "2024-08-07T02:15:36.989522923Z"
+    }
+   },
+   "id": "a2049e464eed2e18"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.95}"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_transformer_policy_1_load0_on0.stats\"\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T02:16:02.018689804Z",
+     "start_time": "2024-08-07T02:16:01.870919264Z"
+    }
+   },
+   "id": "bc0c40338b1201c9"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "64f0f3f5de1cb522"
+   "id": "68602f6868e76ef8"
   }
  ],
  "metadata": {
