finish debugging init issue

--- a/notebooks/custom_task.ipynb
+++ b/notebooks/custom_task.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-01T19:56:16.282058027Z",
-     "start_time": "2024-08-01T19:56:16.229437182Z"
+     "end_time": "2024-08-07T19:25:28.847547872Z",
+     "start_time": "2024-08-07T19:25:28.498170714Z"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mNo private macro file found! (macros.py:53)\n",
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mTo setup, run: python /home/yygx/anaconda3/envs/libero/lib/python3.8/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -27,6 +36,31 @@
     "object_dict = get_object_dict()\n",
     "print(sorted(object_dict.keys()))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "libero.libero.envs.objects.hope_objects.Popcorn"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "object_dict['popcorn']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T19:29:59.939110028Z",
+     "start_time": "2024-08-07T19:29:59.909395791Z"
+    }
+   },
+   "id": "b0678f1c970857"
   },
   {
    "cell_type": "code",
