--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -1383,13 +1383,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.85}"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_transformer_policy_1_load1_on1.stats\"\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T17:23:41.441722889Z",
+     "start_time": "2024-08-07T17:23:41.435364417Z"
+    }
+   },
+   "id": "68602f6868e76ef8"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'loss': 0.0, 'success_rate': 0.7}"
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats_file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/videos/experiments_saved/libero_90_base_bc_transformer_policy_1_load2_on2.stats\"\n",
+    "torch.load(stats_file_path)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T17:23:49.395357553Z",
+     "start_time": "2024-08-07T17:23:49.360590609Z"
+    }
+   },
+   "id": "419779dcd2436010"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T17:47:37.704049041Z",
+     "start_time": "2024-08-07T17:47:37.689340026Z"
+    }
+   },
+   "id": "861760e7294bc558"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "68602f6868e76ef8"
+   "id": "7972108ddcf7a1f9"
   }
  ],
  "metadata": {
