--- a/notebooks/debug_init.ipynb
+++ b/notebooks/debug_init.ipynb
@@ -2,16 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-08-06T16:54:19.450644283Z",
-     "start_time": "2024-08-06T16:54:19.422311216Z"
+     "end_time": "2024-08-07T17:47:43.129457232Z",
+     "start_time": "2024-08-07T17:47:42.510395870Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mNo private macro file found! (macros.py:53)\n",
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mIt is recommended to use a private macro file (macros.py:54)\n",
+      "\u001B[1m\u001B[33m[robosuite WARNING] \u001B[0mTo setup, run: python /home/yygx/anaconda3/envs/libero/lib/python3.8/site-packages/robosuite/scripts/setup_macros.py (macros.py:55)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from libero.libero.envs import OffScreenRenderEnv\n",
@@ -85,17 +95,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "OrderedDict([('robot0_joint_pos',\n              array([ 0.        , -0.16103739,  0.        , -2.44459747,  0.        ,\n                      2.2267522 ,  0.78539816])),\n             ('robot0_joint_pos_cos',\n              array([ 1.        ,  0.98706148,  1.        , -0.76677449,  1.        ,\n                     -0.60991702,  0.70710678])),\n             ('robot0_joint_pos_sin',\n              array([ 0.        , -0.16034226,  0.        , -0.64191657,  0.        ,\n                      0.79246529,  0.70710678])),\n             ('robot0_joint_vel', array([0., 0., 0., 0., 0., 0., 0.])),\n             ('robot0_eef_pos',\n              array([-0.20846466,  0.        ,  1.17327948])),\n             ('robot0_eef_quat',\n              array([ 9.99596605e-01,  2.46212832e-04, -2.84001205e-02, -6.99529596e-06])),\n             ('robot0_gripper_qpos', array([ 0.020833, -0.020833])),\n             ('robot0_gripper_qvel', array([0., 0.])),\n             ('agentview_image',\n              array([[[201, 184, 164],\n                      [199, 182, 162],\n                      [199, 181, 161],\n                      ...,\n                      [194, 177, 161],\n                      [194, 177, 161],\n                      [200, 183, 167]],\n              \n                     [[202, 185, 164],\n                      [200, 183, 162],\n                      [199, 182, 162],\n                      ...,\n                      [195, 178, 162],\n                      [196, 180, 164],\n                      [201, 184, 168]],\n              \n                     [[202, 185, 165],\n                      [201, 184, 164],\n                      [200, 183, 162],\n                      ...,\n                      [195, 178, 162],\n                      [199, 182, 166],\n                      [204, 187, 171]],\n              \n                     ...,\n              \n                     [[ 25,  25,  25],\n                      [ 21,  21,  21],\n                      [ 19,  19,  19],\n                      ...,\n                      [  0,   0,   0],\n                      [  0,   0,   0],\n                      [  0,   0,   0]],\n              \n                     [[ 96,  96,  96],\n                      [ 89,  89,  89],\n                      [ 81,  81,  81],\n                      ...,\n                      [  0,   0,   0],\n                      [  0,   0,   0],\n                      [  0,   0,   0]],\n              \n                     [[140, 140, 140],\n                      [135, 135, 135],\n                      [130, 130, 130],\n                      ...,\n                      [  0,   0,   0],\n                      [  0,   0,   0],\n                      [  0,   0,   0]]], dtype=uint8)),\n             ('robot0_eye_in_hand_image',\n              array([[[ 53,  53,  53],\n                      [ 53,  53,  53],\n                      [ 53,  53,  53],\n                      ...,\n                      [ 52,  52,  52],\n                      [ 52,  52,  52],\n                      [ 52,  52,  52]],\n              \n                     [[ 53,  53,  53],\n                      [ 53,  53,  53],\n                      [ 53,  53,  53],\n                      ...,\n                      [ 52,  52,  52],\n                      [ 52,  52,  52],\n                      [ 52,  52,  52]],\n              \n                     [[ 53,  53,  53],\n                      [ 53,  53,  53],\n                      [ 53,  53,  53],\n                      ...,\n                      [ 52,  52,  52],\n                      [ 52,  52,  52],\n                      [ 52,  52,  52]],\n              \n                     ...,\n              \n                     [[199, 181, 161],\n                      [198, 180, 160],\n                      [198, 179, 159],\n                      ...,\n                      [ 51,  44,  38],\n                      [ 51,  44,  38],\n                      [ 51,  44,  38]],\n              \n                     [[199, 181, 161],\n                      [197, 179, 159],\n                      [197, 179, 159],\n                      ...,\n                      [ 51,  44,  38],\n                      [ 51,  44,  38],\n                      [ 51,  44,  38]],\n              \n                     [[200, 182, 162],\n                      [197, 179, 159],\n                      [197, 179, 159],\n                      ...,\n                      [ 51,  44,  38],\n                      [ 51,  44,  38],\n                      [ 51,  44,  38]]], dtype=uint8)),\n             ('akita_black_bowl_1_pos',\n              array([-0.0991922 ,  0.00625396,  0.97      ])),\n             ('akita_black_bowl_1_quat',\n              array([0.        , 0.        , 0.70710678, 0.70710678])),\n             ('akita_black_bowl_1_to_robot0_eef_pos',\n              array([ 0.12064093, -0.00619453,  0.1967474 ])),\n             ('akita_black_bowl_1_to_robot0_eef_quat',\n              array([ 0.7069956 , -0.7066475 , -0.02007697,  0.02008687], dtype=float32)),\n             ('butter_1_pos', array([-0.01040154,  0.22216356,  0.93      ])),\n             ('butter_1_quat', array([0., 0., 1., 0.])),\n             ('butter_1_to_robot0_eef_pos',\n              array([ 0.21166581, -0.22205934,  0.23164161])),\n             ('butter_1_to_robot0_eef_quat',\n              array([ 2.4621288e-04, -9.9959654e-01,  6.9942325e-06,  2.8400123e-02],\n                    dtype=float32)),\n             ('butter_2_pos', array([-0.09665829,  0.21801243,  0.93      ])),\n             ('butter_2_quat', array([0., 0., 1., 0.])),\n             ('butter_2_to_robot0_eef_pos',\n              array([ 0.12554616, -0.21795063,  0.23653903])),\n             ('butter_2_to_robot0_eef_quat',\n              array([ 2.4621288e-04, -9.9959654e-01,  6.9942325e-06,  2.8400123e-02],\n                    dtype=float32)),\n             ('chocolate_pudding_1_pos',\n              array([0.00454506, 0.05873196, 0.97      ])),\n             ('chocolate_pudding_1_quat', array([0., 0., 1., 0.])),\n             ('chocolate_pudding_1_to_robot0_eef_pos',\n              array([ 0.22423668, -0.0586215 ,  0.19085748])),\n             ('chocolate_pudding_1_to_robot0_eef_quat',\n              array([ 2.4621288e-04, -9.9959654e-01,  6.9942325e-06,  2.8400123e-02],\n                    dtype=float32)),\n             ('robot0_proprio-state',\n              array([ 0.00000000e+00, -1.61037389e-01,  0.00000000e+00, -2.44459747e+00,\n                      0.00000000e+00,  2.22675220e+00,  7.85398163e-01,  1.00000000e+00,\n                      9.87061477e-01,  1.00000000e+00, -7.66774487e-01,  1.00000000e+00,\n                     -6.09917018e-01,  7.07106781e-01,  0.00000000e+00, -1.60342259e-01,\n                      0.00000000e+00, -6.41916572e-01,  0.00000000e+00,  7.92465287e-01,\n                      7.07106781e-01,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n                      0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  0.00000000e+00,\n                     -2.08464661e-01,  0.00000000e+00,  1.17327948e+00,  9.99596605e-01,\n                      2.46212832e-04, -2.84001205e-02, -6.99529596e-06,  2.08330000e-02,\n                     -2.08330000e-02,  0.00000000e+00,  0.00000000e+00])),\n             ('object-state',\n              array([-9.91921992e-02,  6.25396280e-03,  9.70000000e-01,  0.00000000e+00,\n                      0.00000000e+00,  7.07106781e-01,  7.07106781e-01,  1.20640928e-01,\n                     -6.19453373e-03,  1.96747402e-01,  7.06995606e-01, -7.06647515e-01,\n                     -2.00769734e-02,  2.00868659e-02, -1.04015381e-02,  2.22163562e-01,\n                      9.30000000e-01,  0.00000000e+00,  0.00000000e+00,  1.00000000e+00,\n                      0.00000000e+00,  2.11665806e-01, -2.22059340e-01,  2.31641605e-01,\n                      2.46212876e-04, -9.99596536e-01,  6.99423254e-06,  2.84001231e-02,\n                     -9.66582931e-02,  2.18012428e-01,  9.30000000e-01,  0.00000000e+00,\n                      0.00000000e+00,  1.00000000e+00,  0.00000000e+00,  1.25546164e-01,\n                     -2.17950628e-01,  2.36539034e-01,  2.46212876e-04, -9.99596536e-01,\n                      6.99423254e-06,  2.84001231e-02,  4.54505588e-03,  5.87319554e-02,\n                      9.70000000e-01,  0.00000000e+00,  0.00000000e+00,  1.00000000e+00,\n                      0.00000000e+00,  2.24236682e-01, -5.86215043e-02,  1.90857477e-01,\n                      2.46212876e-04, -9.99596536e-01,  6.99423254e-06,  2.84001231e-02]))])"
-     },
-     "execution_count": 231,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
     "from libero.libero.envs import OffScreenRenderEnv\n",
     "from PIL import Image\n",
@@ -106,13 +107,13 @@
     "        }\n",
     "\n",
     "env = SequentialEnv(n_tasks=2, **env_args)\n",
-    "env.reset()"
+    "obs = env.reset()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-08-06T16:54:24.303352315Z",
-     "start_time": "2024-08-06T16:54:19.833775010Z"
+     "end_time": "2024-08-07T17:47:55.006707049Z",
+     "start_time": "2024-08-07T17:47:50.241864168Z"
     }
    },
    "id": "1f332a2e7d7bb76"
@@ -151,6 +152,41 @@
     }
    },
    "id": "17305d0561f6a92d"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "odict_keys(['robot0_joint_pos', 'robot0_joint_pos_cos', 'robot0_joint_pos_sin', 'robot0_joint_vel', 'robot0_eef_pos', 'robot0_eef_quat', 'robot0_gripper_qpos', 'robot0_gripper_qvel', 'agentview_image', 'robot0_eye_in_hand_image', 'akita_black_bowl_1_pos', 'akita_black_bowl_1_quat', 'akita_black_bowl_1_to_robot0_eef_pos', 'akita_black_bowl_1_to_robot0_eef_quat', 'butter_1_pos', 'butter_1_quat', 'butter_1_to_robot0_eef_pos', 'butter_1_to_robot0_eef_quat', 'butter_2_pos', 'butter_2_quat', 'butter_2_to_robot0_eef_pos', 'butter_2_to_robot0_eef_quat', 'chocolate_pudding_1_pos', 'chocolate_pudding_1_quat', 'chocolate_pudding_1_to_robot0_eef_pos', 'chocolate_pudding_1_to_robot0_eef_quat', 'robot0_proprio-state', 'object-state'])"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs.keys()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-08-07T17:48:09.807758341Z",
+     "start_time": "2024-08-07T17:48:09.748744977Z"
+    }
+   },
+   "id": "1dfc373cf6abe695"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "de09d374283824a9"
   },
   {
    "cell_type": "code",
