debug why training skills so slow

--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -2363,13 +2363,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "demo_0 (183, 7)\n",
+      "demo_1 (204, 7)\n",
+      "demo_2 (192, 7)\n",
+      "demo_3 (204, 7)\n",
+      "demo_4 (182, 7)\n",
+      "demo_5 (186, 7)\n",
+      "demo_6 (171, 7)\n",
+      "demo_7 (210, 7)\n",
+      "demo_8 (198, 7)\n",
+      "demo_9 (194, 7)\n",
+      "demo_10 (203, 7)\n",
+      "demo_11 (180, 7)\n",
+      "demo_12 (198, 7)\n",
+      "demo_13 (182, 7)\n",
+      "demo_14 (182, 7)\n",
+      "demo_15 (183, 7)\n",
+      "demo_16 (177, 7)\n",
+      "demo_17 (189, 7)\n",
+      "demo_18 (194, 7)\n",
+      "demo_19 (183, 7)\n",
+      "demo_20 (195, 7)\n",
+      "demo_21 (199, 7)\n",
+      "demo_22 (199, 7)\n",
+      "demo_23 (176, 7)\n",
+      "demo_24 (185, 7)\n",
+      "demo_25 (185, 7)\n",
+      "demo_26 (199, 7)\n",
+      "demo_27 (186, 7)\n",
+      "demo_28 (205, 7)\n",
+      "demo_29 (200, 7)\n",
+      "demo_30 (178, 7)\n",
+      "demo_31 (185, 7)\n",
+      "demo_32 (206, 7)\n",
+      "demo_33 (171, 7)\n",
+      "demo_34 (182, 7)\n",
+      "demo_35 (194, 7)\n",
+      "demo_36 (190, 7)\n",
+      "demo_37 (212, 7)\n",
+      "demo_38 (183, 7)\n",
+      "demo_39 (202, 7)\n",
+      "demo_40 (196, 7)\n",
+      "demo_41 (189, 7)\n",
+      "demo_42 (194, 7)\n",
+      "demo_43 (180, 7)\n",
+      "demo_44 (185, 7)\n",
+      "demo_45 (169, 7)\n",
+      "demo_46 (178, 7)\n",
+      "demo_47 (173, 7)\n",
+      "demo_48 (177, 7)\n",
+      "demo_49 (172, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/datasets/libero_90/KITCHEN_SCENE10_put_the_butter_at_the_back_in_the_top_drawer_of_the_cabinet_and_close_it_demo.hdf5\"\n",
+    "data_dict = load_hdf5_file_to_dict(file_path)\n",
+    "for demo_idx in sorted(list(data_dict['data'].keys()), key=lambda x: int(x.split(\"_\")[-1])):\n",
+    "    print(demo_idx, data_dict[\"data\"][demo_idx]['actions'].shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-01T22:33:33.500200112Z",
+     "start_time": "2024-09-01T22:33:32.564467382Z"
+    }
+   },
+   "id": "a3cfd6bd3152c6f2"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "a3cfd6bd3152c6f2"
+   "id": "916c660c068b53d6"
   }
  ],
  "metadata": {
