debug why training skills so slow

--- a/notebooks/debug.ipynb
+++ b/notebooks/debug.ipynb
@@ -2439,13 +2439,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "demo_0 (326, 7)\n",
+      "demo_1 (393, 7)\n",
+      "demo_2 (288, 7)\n",
+      "demo_3 (316, 7)\n",
+      "demo_4 (368, 7)\n",
+      "demo_5 (622, 7)\n",
+      "demo_6 (316, 7)\n",
+      "demo_7 (308, 7)\n",
+      "demo_8 (375, 7)\n",
+      "demo_9 (361, 7)\n",
+      "demo_10 (287, 7)\n",
+      "demo_11 (321, 7)\n",
+      "demo_12 (327, 7)\n",
+      "demo_13 (409, 7)\n",
+      "demo_14 (379, 7)\n",
+      "demo_15 (348, 7)\n",
+      "demo_16 (301, 7)\n",
+      "demo_17 (348, 7)\n",
+      "demo_18 (354, 7)\n",
+      "demo_19 (297, 7)\n",
+      "demo_20 (413, 7)\n",
+      "demo_21 (373, 7)\n",
+      "demo_22 (370, 7)\n",
+      "demo_23 (293, 7)\n",
+      "demo_24 (337, 7)\n",
+      "demo_25 (355, 7)\n",
+      "demo_26 (272, 7)\n",
+      "demo_27 (291, 7)\n",
+      "demo_28 (357, 7)\n",
+      "demo_29 (398, 7)\n",
+      "demo_30 (311, 7)\n",
+      "demo_31 (310, 7)\n",
+      "demo_32 (286, 7)\n",
+      "demo_33 (382, 7)\n",
+      "demo_34 (391, 7)\n",
+      "demo_35 (414, 7)\n",
+      "demo_36 (316, 7)\n",
+      "demo_37 (358, 7)\n",
+      "demo_38 (292, 7)\n",
+      "demo_39 (302, 7)\n",
+      "demo_40 (333, 7)\n",
+      "demo_41 (266, 7)\n",
+      "demo_42 (368, 7)\n",
+      "demo_43 (370, 7)\n",
+      "demo_44 (317, 7)\n",
+      "demo_45 (333, 7)\n",
+      "demo_46 (313, 7)\n",
+      "demo_47 (484, 7)\n",
+      "demo_48 (344, 7)\n",
+      "demo_49 (277, 7)\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_path = \"/home/yygx/UNC_Research/pkgs_simu/LIBERO/libero/datasets/yy_try/SHELF_TABLE_SCENE_moving_chocolate_pudding_from_table_to_topside_of_wooden_shelf_demo.hdf5\"\n",
+    "data_dict = load_hdf5_file_to_dict(file_path)\n",
+    "for demo_idx in sorted(list(data_dict['data'].keys()), key=lambda x: int(x.split(\"_\")[-1])):\n",
+    "    print(demo_idx, data_dict[\"data\"][demo_idx]['actions'].shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-01T22:50:29.883093938Z",
+     "start_time": "2024-09-01T22:50:29.448200958Z"
+    }
+   },
+   "id": "916c660c068b53d6"
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false
    },
-   "id": "916c660c068b53d6"
+   "id": "e2f5128d7ef0d5dc"
   }
  ],
  "metadata": {
